tests/EtaX/EtaX.prop/EtaX.prop.00.check
// 2.13-base exitCode: 1   val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
/d/shisa/target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.00.scala:6: error: type mismatch;
 found   : String
 required: () => Any
  val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
                       ^
one error found
// 2.13-head exitCode: 1   val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
/d/shisa/target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.00.scala:6: error: type mismatch;
 found   : String
 required: () => Any
  val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
                       ^
1 error
// 2.13-new exitCode: 1   val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
/d/shisa/target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.00.scala:6: error: type mismatch;
 found   : String
 required: () => Any
  val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
                       ^
1 error
// 3.0-old exitCode: 1   val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
-- [E007] Type Mismatch Error: /d/shisa/target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.00.scala:6:23 
6 |  val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
  |                       ^^^^
  |                       Found:    String
  |                       Required: () => Any
1 error found
// 3.0 exitCode: 1   val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
-- [E007] Type Mismatch Error: /d/shisa/target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.00.scala:6:23 
6 |  val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
  |                       ^^^^
  |                       Found:    String
  |                       Required: () => Any
1 error found
// 3.1 exitCode: 1   val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
-- [E007] Type Mismatch Error: /d/shisa/target/tests/EtaX/EtaX.prop/EtaX.prop/EtaX.prop.00.scala:6:23 
6 |  val t2a: () => Any = prop                   // error: no eta-expansion of nullary methods
  |                       ^^^^
  |                       Found:    String
  |                       Required: () => Any
1 error found
